--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -1,10 +1,23 @@
+<!DOCTYPE html>
+
 <html>
   <head>
+    <meta charset="utf-8"/>
+    <meta name="author" content="Dzenan Ridjanovic"/>
     <title>MagicBoxes</title>
   </head>
+  
   <body>
-    <h1>MagicBoxes</h1>
-    <h2 id="status">dart is not running</h2>
-    <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+    <header>
+      <h1>Magic Boxes in Dart</h1>
+    </header>
+    
+    <section> 
+      <header>
+        <h2>Two Boxes</h2>
+      </header>
+      <canvas id="canvas" width="600" height="400"></canvas>
+      <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+    </section>
   </body>
 </html>
