--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -14,7 +14,7 @@
     
     <section> 
       <header>
-        <h2>Two Boxes</h2>
+        <h2>Moving Monsters</h2>
       </header>
       <canvas id="canvas" width="600" height="400"></canvas>
       <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
