creating boxes and moving selected boxes

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -14,9 +14,12 @@
     
     <section> 
       <header>
-        <h2>Moving Monsters</h2>
+        <h2>Creating Boxes and Moving Selected Boxes</h2>
+        <!-- http://dev.opera.com/articles/view/html-5-canvas-the-basics/ -->
       </header>
-      <canvas id="canvas" width="600" height="400"></canvas>
+      <canvas id="canvas" width="600" height="400">
+        Canvas is not supported in your browser.
+      </canvas>
       <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
     </section>
   </body>
