improved moving; box items

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -9,15 +9,12 @@
   
   <body>
     <header>
-      <h1>Magic Boxes in Dart</h1>
+      <h2>Magic Boxes in Dart: Boxes with Text Move Properly</h2>
+      <!-- http://dev.opera.com/articles/view/html-5-canvas-the-basics/ -->
     </header>
     
     <section> 
-      <header>
-        <h2>Creating Boxes and Moving Selected Boxes</h2>
-        <!-- http://dev.opera.com/articles/view/html-5-canvas-the-basics/ -->
-      </header>
-      <canvas id="canvas" width="600" height="400">
+      <canvas id="canvas" width="800" height="600">
         Canvas is not supported in your browser.
       </canvas>
       <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
