double-click tool

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -33,15 +33,19 @@
         <h3>Creating and Moving Boxes</h3>
       </header>
       <p>
-        Click on the box button, in the tool bar, each time you want to create a box, by clicking on an empty space in the board.
+        Click the box tool (button), in the tool bar, each time you want to create a box, by clicking on an empty space in the board.
       </p>
       <p>
-        To move a non selected box, click on the box and keep the mouse down while moving it. 
+        To move a non selected box, click the box and keep the mouse down while moving it. 
         A selected box cannot be moved.
       </p>
       <p>
-        Click on the box to select it. Click again to deselect it. 
+        Click the box to select it. Click again to deselect it. 
         If there are several selected boxes, you may deselect them all by clicking on an empty space in the board.
+      </p>
+      <p>
+        If you want to create several boxes, double-click the box tool to stay on. 
+        To return to the select mode double-click the select tool.
       </p>
     </section> 
   </body>
