line in a tool bar

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -78,6 +78,24 @@
         <button id="getItem">Get</button>
         <button id="setItem">Set</button>
         <button id="removeItem">Remove</button>
+        <br/>
+        <label id="line12Box1">Box1</label> ->
+        <label id="line12Box2">Box2</label>
+        <label for="line12Min">Min</label>
+        <input type="text" id="line12Min"/> ..
+        <label for="line12Max">Max</label>
+        <input type="text" id="line12Max"/>
+        <label for="line12Id">Id</label>
+        <input type="checkbox" id="line12Id"/>
+        
+        <label id="line21Box2">Box2</label> ->
+        <label id="line21Box1">Box1</label>
+        <label for="line21Min">Min</label>
+        <input type="text" id="line21Min"/> ..
+        <label for="line21Max">Max</label>
+        <input type="text" id="line21Max"/>
+        <label for="line21Id">Id</label>
+        <input type="checkbox" id="line21Id"/>
       </footer>
       <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
     </section>
@@ -109,7 +127,7 @@
         <h3>Creating, Moving and Selecting Boxes and Lines</h3>
       </header>
       <p>
-        With the Spiral 08, you can start designing models such as the meta model in the following diagram. 
+        With the spiral 08, you can start designing a model such as the meta model in the following diagram. 
         <a href="#"><img src="img/metamodel.png"/></a>
         However, you cannot still save a model in a file. 
       </p>
@@ -153,5 +171,44 @@
         To return to the select mode double-click the select tool.
       </p>
     </section> 
+    
+    <section>
+      <header>
+        <h3>Spirals</h3>
+      </header>
+      <ul class="link">
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s00/MagicBoxes.html">Spiral 00: Hello World</a>
+        </li>
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s01/MagicBoxes.html">Spiral 01: Two Boxes</a>
+        </li>
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s02/MagicBoxes.html">Spiral 02: Moving Monsters</a>
+        </li>
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s03/MagicBoxes.html">Spiral 03: 
+          Creating Boxes and Moving Selected Boxes</a>
+        </li>
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s04/MagicBoxes.html">Spiral 04: 
+          Boxes, with Text, Move Properly</a>
+        </li>
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s05/MagicBoxes.html">Spiral 05: Boxes with Tool Bar</a>
+        </li>
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s06/MagicBoxes.html">Spiral 06: Boxes with Lines</a>
+        </li>
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s07/MagicBoxes.html">Spiral 07: 
+          Line Selection and Horizontal Menu Bar with Menus and Menu Items </a>
+        </li>
+        <li>
+          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s08/MagicBoxes.html">Spiral 08: 
+          Boxes with User Entered Names and Items</a>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
