--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -142,7 +142,7 @@
         (after reading the Getting Started section, developing the first 
         <a  href="https://plus.google.com/u/0/112767453954051794400/posts/igDQd1ubWQs">example</a>, 
         and the <a href="https://github.com/dzenanr/pingpong">Ping Pong</a> game). 
-        The tool is based on the <a href="http://code.google.com/p/magic-boxes/">Magic Boxes</a> and on 
+        The tool is based on <a href="http://code.google.com/p/magic-boxes/">Magic Boxes</a> and 
         <a href="http://www.modelibra.org/">Modelibra Modeler</a>,
         both developed in Java.
       </p>
@@ -161,7 +161,7 @@
         <h3>Creating, Moving, Selecting and Editing Boxes and Lines</h3>
       </header>
       <p>
-        With the spiral 10, you can start designing a model such as the meta model in the following diagram. 
+        With spiral 10, you can start designing a model such as the meta model in the following diagram. 
         <a href="#"><img src="img/metamodel.png"/></a>
       </p>
       <p>
@@ -183,7 +183,7 @@
         The item is an attribute of the box (concept). In addition, it may be declared as guid (globally unique identifier--not significant to a user), 
         identifier (significant to a user) or required (mandatory value). The choice is presented in the pop-up list.
         An existing item may be obtained by entering its name and clicking on the Get button. 
-        The obtained item may be changed, including its sequence position within the box, (Set button) 
+        The obtained item may be changed (Set button), including its sequence position within the box,  
         or even removed (Remove button). The size of selected boxes may be changed by menu items in the View menu. 
       </p>
       <p>
@@ -197,15 +197,20 @@
         The min is 0 and the max is N. By default, the child box has 1..1 cardinalities. 
         An example is Department--0..N----1..1--Employee. 
         A department has from 0 to N employees and an employee works for exactly one department.
+        The line is a relationship between two boxes (concepts). It has two directions: from parent to child (neighbor) and from child to parent (neighbor).
         The last selected line may be obtained by clicking on the Get button in the tool bar.
-        The line is a relationship between two boxes (concepts). It has two directions: from parent to child (neighbor) and from child to parent (neighbor). 
-        In addition, it may be declared as inheritance (child inherits from parent), 
-        reflexive (one, not two boxes) or twin (two lines between two boxes). The choice is presented in the pop-up list.
+        The obtained line may be transformed to inheritance line (child inherits from parent), 
+        to reflexive line (one-parent box, not two boxes) or to twin line (two lines between the same two boxes must be first created). 
+        The choice is presented in the pop-up list.
         The line cardinalities may be changed. For the 1..1 cardinalities, the identifier (id) may be checked on.
         The line changes may be set by clicking on the Set button.
       </p>
       <p>
         Click the line, or very close to it, to select it. Click again to deselect it. 
+        A reflexive line is selected by clicking on a horizontal portion of the line.
+        If two lines are created between the same two boxes, the last line may be selected by clicking on both lines. 
+        The selected line should be displayed in the tool bar by clicking on the Get button. 
+        Then, the twin choice will separate the two lines into twins. 
         If there are several selected lines (and/or boxes), you may deselect them all by clicking on an empty space in the board.
       </p>
       <p>
