spirals are now on GitHub

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -14,7 +14,7 @@
   
   <body>
     <header>
-      <h2>Magic Boxes in Dart: From Model to JSON and from JSON to Model</h2>
+      <h2>Magic Boxes in Dart</h2>
       <!-- http://dev.opera.com/articles/view/html-5-canvas-the-basics/ -->
     </header>
     
@@ -61,8 +61,8 @@
        <li>About 
          <ul>
            <li>Magic Boxes in <a href="http://www.dart.org/">Dart</a></li>
-           <li>Spiral 11</li>
-           <li>2012-01-08</li>
+           <li>Spiral 12</li>
+           <li>2012-01-20</li>
            <li>
              <a href="https://plus.google.com/u/0/b/113649577593294551754/">On Dart</a>
            </li>
@@ -224,10 +224,11 @@
     
     <section>
       <header>
-        <h3>Spiral 11: From Model to JSON and from JSON to Model</h3>
+        <h3>Spiral 12: Final Touches</h3>
       </header>
       <p>
-        With spiral 11, you can start designing a model such as the meta model in the following diagram.
+        Spiral 12 is the final version of the MagicBoxes project.
+        With spiral 12, you can start designing a model such as the meta model in the following diagram.
       </p>
       <p>
         <a href="#"><img src="model/metamodel.png"/></a> 
@@ -338,43 +339,47 @@
       </p>
       <ul class="link">
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s00/MagicBoxes.html">Spiral 00: Hello World</a>
+          <a href="http://dzenanr.github.com/mb/spirals/s00/MagicBoxes/MagicBoxes.html">Spiral 00: Hello World</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s01/MagicBoxes.html">Spiral 01: Two Boxes</a>
+          <a href="http://dzenanr.github.com/mb/spirals/s01/MagicBoxes/MagicBoxes.html">Spiral 01: Two Boxes</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s02/MagicBoxes.html">Spiral 02: Moving Monsters</a>
+          <a href="http://dzenanr.github.com/mb/spirals/s02/MagicBoxes/MagicBoxes.html">Spiral 02: Moving Monsters</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s03/MagicBoxes.html">Spiral 03: 
+          <a href="http://dzenanr.github.com/mb/spirals/s03/MagicBoxes/MagicBoxes.html">Spiral 03: 
           Creating Boxes and Moving Selected Boxes</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s04/MagicBoxes.html">Spiral 04: 
+          <a href="http://dzenanr.github.com/mb/spirals/s04/MagicBoxes/MagicBoxes.html">Spiral 04: 
           Boxes, with Text, Move Properly</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s05/MagicBoxes.html">Spiral 05: Boxes with Tool Bar</a>
+          <a href="http://dzenanr.github.com/mb/spirals/s05/MagicBoxes/MagicBoxes.html">Spiral 05: Boxes with Tool Bar</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s06/MagicBoxes.html">Spiral 06: Boxes with Lines</a>
+          <a href="http://dzenanr.github.com/mb/spirals/s06/MagicBoxes/MagicBoxes.html">Spiral 06: Boxes with Lines</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s07/MagicBoxes.html">Spiral 07: 
+          <a href="http://dzenanr.github.com/mb/spirals/s07/MagicBoxes/MagicBoxes.html">Spiral 07: 
           Line Selection and Horizontal Menu Bar with Menus and Menu Items </a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s08/MagicBoxes.html">Spiral 08: 
+          <a href="http://dzenanr.github.com/mb/spirals/s08/MagicBoxes/MagicBoxes.html">Spiral 08: 
           Boxes with User Entered Names and Items</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s09/MagicBoxes.html">Spiral 09: 
+          <a href="http://dzenanr.github.com/mb/spirals/s09/MagicBoxes/MagicBoxes.html">Spiral 09: 
           Lines with User Entered Cardinalities, Ids and Names</a>
         </li>
         <li>
-          <a href="http://dl.dropbox.com/u/161496/dart/tool/MagicBoxes/spirals/s10/MagicBoxes.html">Spiral 10: 
+          <a href="http://dzenanr.github.com/mb/spirals/s10/MagicBoxes/MagicBoxes.html">Spiral 10: 
           Inheritance, Reflexive and Twin Lines</a>
+        </li>
+        <li>
+          <a href="http://dzenanr.github.com/mb/spirals/s11/MagicBoxes/MagicBoxes.html">Spiral 11: 
+          From Model to JSON and from JSON to Model</a>
         </li>
       </ul>
     </section>
