--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -5,6 +5,9 @@
   <body>
     <h1>MagicBoxes</h1>
     <h2 id="status">dart is not running</h2>
-    <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+    <script type="application/dart" src="MagicBoxes.dart"></script>
+    <script 
+      src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
+    </script>
   </body>
 </html>
