--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -17,7 +17,10 @@
         <h2>Two Boxes</h2>
       </header>
       <canvas id="canvas" width="600" height="400"></canvas>
-      <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+      <script type="application/dart" src="MagicBoxes.dart"></script>
+      <script 
+        src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
+      </script>
     </section>
   </body>
 </html>
