script changes in s04a

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -17,7 +17,10 @@
       <canvas id="canvas" width="800" height="600">
         Canvas is not supported in your browser.
       </canvas>
-      <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+      <script type="application/dart" src="MagicBoxes.dart"></script>
+      <script 
+        src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
+      </script>
     </section>
   </body>
 </html>
