script changes in s05a

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -25,7 +25,10 @@
         <button id="select"><img src="img/select.png"/></button>
         <button id="box"><img src="img/box.png"/></button>
       </footer>
-      <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+      <script type="application/dart" src="MagicBoxes.dart"></script>
+      <script 
+        src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
+      </script>
     </section>
     
     <section id="right"> 
