script changes in s08a

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -105,7 +105,10 @@
         <input type="text" id="line21Name"/> |   
         <button id="setLine">Set</button>
       </footer>
-      <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+      <script type="application/dart" src="MagicBoxes.dart"></script>
+      <script 
+        src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
+      </script>
     </section>
     
     <section>
