--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -157,7 +157,10 @@
     <section>
       <button class="button" id="fromModelToPng">To PNG</button>
       <img alt="Your model as PNG." id="modelImage"/>
-      <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+      <script type="application/dart" src="MagicBoxes.dart"></script>
+      <script 
+        src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
+      </script>
     </section>
     
     <section>
