--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -130,7 +130,10 @@
         <label for="line21Name">name</label>
         <input type="text" id="line21Name"/>    
       </footer>
-      <script type="text/javascript" src="MagicBoxes.dart.app.js"></script>
+      <script type="application/dart" src="MagicBoxes.dart"></script>
+      <script 
+        src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
+      </script>
     </section>
     
     <section>
