--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -124,6 +124,7 @@
         <input type="text" id="itemInit" size="16"/>
         <button class="button" id="addItem">Add</button>
         <button class="button" id="getItem">Get</button>
+        <button class="button" id="getNextItem">Get Next</button>
         <button class="button" id="upItem">Up</button>
         <button class="button" id="downItem">Down</button>
         <button class="button" id="setItem">Set</button>
@@ -353,7 +354,8 @@
         from the pop-up list.
         An item may have an initial (default) value.
         An existing item may be selected by entering its name and 
-        clicking on the Get button. 
+        clicking on the Get button.
+        The next item is obtained by clicking on the Get Next button.
         The selected item may be changed (Set button), 
         including its sequence position within the box (Up or Down buttons),  
         or even removed (Remove button). 
