Close model propagations

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -171,13 +171,13 @@
     <section> 
       <button class="button" id="fromModelToJson">To JSON</button>
       <button class="button" id="fromJsonToModel">From JSON</button>
-      <button class="button" id="clear">Clear</button>  
+      <button class="button" id="clearJson">Clear</button>  
       <textarea name="modelJson" rows=20 cols=120 id="modelJson"></textarea>
     </section> 
     
     <section>
       <button class="button" id="fromModelToPng">To PNG</button>
-      <button class="button" id="remove">Remove</button>
+      <button class="button" id="clearImage">Clear</button>
       <img alt="Your model as PNG." id="modelImage"/>
     </section>
     
