get previous item

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -127,10 +127,11 @@
         <label for="itemInit">init</label>
         <input type="text" id="itemInit" size="16"/>
         <button class="button" id="addItem">Add</button>
-        <button class="button" id="getItem">Get</button>
-        <button class="button" id="getNextItem">Get Next</button>
-        <button class="button" id="upItem">Up</button>
-        <button class="button" id="downItem">Down</button>
+        <button class="button" id="getPreviousItem">Get -1</button>
+        <button class="button" id="getItem">Get 1</button>
+        <button class="button" id="getNextItem">Get +1</button>
+        <button class="button" id="moveUpItem">Move -1</button>
+        <button class="button" id="moveDownItem">Move +1</button>
         <button class="button" id="removeItem">Remove</button>     
         <br/>    
         <label>Line</label>
@@ -216,8 +217,8 @@
         A box item may be created by entering its name in the Item field of 
         the tool bar and by clicking on the Add button.
         An existing item may be selected by entering its name and 
-        clicking on the Get button. The next item is obtained by clicking 
-        on the Get Next button.
+        clicking on the Get 1 button. The next item is obtained by clicking 
+        on the Get +1 button.
       </p> 
       <p>
         Click the line tool to create a line between two boxes by clicking 
@@ -353,12 +354,13 @@
         An item type may be changed by selecting a different type 
         from the pop-up list.
         An item may have an initial (default) value.
-        An existing item may be selected by entering its name and 
-        clicking on the Get button.
-        The next item is obtained by clicking on the Get Next button.
-        The selected (current) item may be changed, 
-        including its sequence position within the box (Up or Down buttons),  
-        or even removed (Remove button). 
+        An existing item may be selected, to become the current item,
+        by entering its name and clicking on the Get 1 button.
+        The previous item is obtained by clicking on the Get -1 button.
+        The next item is obtained by clicking on the Get +1 button.
+        The current item may be changed, 
+        including its sequence position within the box 
+        (Move -1 or Move + buttons), or even removed (Remove button). 
         The size of selected boxes may be changed 
         by menu items in the View menu. 
       </p>
