new models; max 2 lines between the same 2 boxes

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -384,6 +384,7 @@
         The line is a relationship between two boxes (concepts). 
         It has two directions: from parent to child (neighbor) and 
         from child to parent (neighbor).
+        You cannot create more than two lines between the same two boxes.
         The selected line may be transformed (and obtained in the tool bar) 
         to inheritance line (child inherits from parent), 
         to reflexive line (one-parent box, not two boxes) or 
