--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -14,7 +14,7 @@
   
   <body>
     <header>
-      <h2>Magic Boxes in Dart</h2>
+      <h2>Magic Boxes in Dart: Local Storage</h2>
       <!-- http://dev.opera.com/articles/view/html-5-canvas-the-basics/ -->
     </header>
     
