--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -14,18 +14,18 @@
   
   <body>
     <header>
-      <h2>Magic Boxes in Dart: Local Storage</h2>
+      <h2>Magic Boxes in Dart</h2>
       <!-- http://dev.opera.com/articles/view/html-5-canvas-the-basics/ -->
     </header>
     
     <nav>
      <ul>
-       <li>File
+       <li>Model
          <ul>
            <li><input type="text" id="model-name"/></li>
-           <li><button id="open-model">Open Model</button></li>
-           <li><button id="save-model">Save Model</button></li>
-           <li><button id="close-model">Close Model</button></li>
+           <li><button id="open-model">Open</button></li>
+           <li><button id="save-model">Save</button></li>
+           <li><button id="close-model">Close</button></li>
          </ul>  
        </li>
        <li>Edit
@@ -227,7 +227,7 @@
         The selected line is displayed in the tool bar.
       </p>
       <p>
-        Name the current model in the File menu and 
+        Name the current model in the Model menu and 
         save it in a local storage of your browser.
         Later on, enter the model name and open it.
       </p>
@@ -415,7 +415,7 @@
         To return to the select mode double-click the select tool.
       </p>
       <p>
-        Name the current model in the File menu and 
+        Name the current model in the Model menu and 
         save it in a local storage of your browser.
         Later on, enter the model name and open it.
       </p>
